kubernetes/apps/hello-world/hello-world/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  labels:
    homelab.mpdavis.com/exposure: tailnet
spec:
  entryPoints:
    - tailnet
  routes:
    - match: Host(`hello.${DOMAIN}`)
      kind: Rule
      services:
        - name: hello-world
          port: 80
  tls: {}
